opam-version: "2.0"
name: "satysfi-fonts-junicode-doc"
version: "1.0002+satysfi0.0.5"
synopsis: "Document of SATySFi Font Package for Junicode"
description: """
Document of SATySFi Font Package for Junicode

This package installs fonts from https://junicode.sourceforge.io/
"""
maintainer: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
authors: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
license: "OFL"
homepage: "https://github.com/na4zagin3/SATySFi-fonts-junicode"
bug-reports: "https://github.com/na4zagin3/SATySFi-fonts-junicode/issues"
dev-repo: "git+https://github.com/na4zagin3/SATySFi-fonts-junicode.git"
depends: [
  "satysfi" {>= "0.0.5" & < "0.0.6"}
  "satyrographos" {>= "0.0.2.6" & < "0.0.3"}
  "satysfi-dist"
  "satysfi-fonts-junicode" {= "%{version}%"}

  "satysfi-lipsum"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "fonts-junicode-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "fonts-junicode-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
